<resources>
    <string name="app_name">Appedida</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="entrar">ENTRAR</string>
    <string name="registrar">Registrar</string>
    <string name="appedida">Appedida</string>
    <string name="login">Login</string>
    <string name="digite">Digite seu login</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="cpf">CPF</string>
    <string name="celular">Celular para contato</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="digite_seu_email">Digite seu email </string>
    <string name="digite_seu_cpf">Digite seu CPF</string>
    <string name="celular_para_contato">Celular para contato</string>
    <string name="fazer_pedido">Fazer Pedido</string>
    <string name="meus_pedidos">Meus pedidos já realizados</string>
    <string name="editar_meu_perfil">Editar meu perfil</string>
    <string name="usuario_cadastrado">Usuário cadastrado com sucesso!</string>
    <string name="preco">Preço</string>
    <string name="produto">Produto</string>
    <string name="botao">Botão</string>
    <string name="batata_com_presunto">Batata com presunto</string>
    <string name="reais">R$</string>
    <string name="dez_reais">10,0</string>
    <string name="batata_com_queijo">Batata com queijo</string>
    <string name="batata_com_oregano">Batata com oregano</string>
    <string name="batata_com_batata_palha">Batata com batata palha</string>
    <string name="batata_com_strogonoff">Batata com strogonoff</string>
    <string name="batata_com_rucula">Batata com rucula</string>
    <string name="usuario_salvo">Usuário salvo com sucesso!</string>
    <string name="erro_ao_salvar_usuario">Erro ao salvar usuário!</string>
    <string name="faltou_algum_dado">Faltou preencher campos obrigatório</string>
    <string name="voce_precisa_estar">Você precisa estar cadastrado para começar a realizar um pedido.</string>
    <string name="clique_em_seu_pedido">Clique em um dos itens da lista para continuar realizando sua compra.</string>
    <string name="continuar">Continuar</string>
    <string name="msg_celular_erro">Voce esqueceu de adicionar 41 ao numero ou não colocou digitos mínimos</string>
    <string name="email_invalido">Email inválido!</string>
    <string name="cpf_invalido">Faltou preencher corretamente seu CPF</string>
    <string name="nome">Nome</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="erro_login">Nome deve contar ao menos 5 caracteres</string>
    <string name="erro_senha">Senha deve conter ao menos 6 caracteres</string>
    <string name="erro_email">Verifique o email digitado</string>
    <string name="erro_cpf">CPF deve conter 11 digitos</string>
    <string name="erro_criar_usuario">Falha ao se conectar com o servidor, tente novamente.</string>
    <string name="seja_bem_vindo">Seja bem vindo :</string>
    <string name="usuario">User</string>
    <string name="selecione_um_ou">Selecione um ou mais itens para continuar realizando seu pedido</string>
    <string name="confirma_item_selecionados">Você selecionou os seguintes itens </string>
    <string name="ao_confirmar">Ao confirmar na seguinte tela você poderá selecionar o número de unidades que deseja.</string>
    <string name="selecione_a_quantidade">Selecione a quantidade que deseja para cada unidade selecionada e confira quanto você irá pagar.</string>
    <string name="total_a_pagar">Total a pagar : R$</string>
    <string name="finalizar_pedido">Finalizar pedido</string>
    <string name="unidades">Unidades</string>
    <string name="os_itens">Os itens que você selecionou ficaram assim</string>
    <string name="total">TOTAL :</string>
    <string name="dando_um_total">Dando um total de : R$</string>
    <string name="pedido_salvo">Pedido salvo com sucesso</string>
    <string name="voce_ja_realizou">Você já realizou os seguintes pedidos, fique tranquilo pois estes pedidos só serão armazenados se a operação do seu pedido foi realizada com sucesso.</string>
    <string name="voltar">Voltar</string>
    <string name="selecione_produtos">Selecione ao menos 1 produto para continuar realizando seu pedido.</string>
    <string name="status_pedido">Status Pedido</string>
    <string name="status_pedidos_online">Status Pedidos cadastrados no sistema</string>
    <string name="id_do_pedido">Id do Pedido</string>
    <string name="valor_do_pedido">Valor do Pedido</string>
    <string name="status_do_pedido">Status do Pedido</string>
    <string name="numero_do_pedido">Número do pedido</string>
    <string name="produtos">Produtos</string>
    <string name="id_do_produto">Ids dos produtos</string>
</resources>
