<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo_roxo"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/azul_fundo_oscuro"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/branco"/>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:padding="10dp"
                android:id="@+id/tIdDoPedido"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/numero_do_pedido"
                android:textColor="@color/branco" />

            <TextView
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/branco"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"/>

            <TextView
                android:padding="10dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/produtos"
                android:textColor="@color/branco" />

            <TextView
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/branco"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"/>

            <TextView
                android:id="@+id/tValorDoPedido"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:text="@string/valor_do_pedido"
                android:textColor="@color/branco" />

            <TextView
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/branco"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"/>

            <TextView
                android:id="@+id/tStatusDoPedido"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:text="@string/status_do_pedido"
                android:textColor="@color/branco" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/branco"/>

        <ListView
            android:id="@+id/lAppedida"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"></ListView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/btnVoltar">

        <TextView
            android:background="@drawable/selector_btn"
            android:text="@string/voltar"
            android:gravity="center_vertical|center"
            android:layout_width="match_parent"
            android:textColor="@color/azul_fundo_oscuro"
            android:textSize="@dimen/font18"
            android:layout_height="@dimen/dimen57" />
    </LinearLayout>

</LinearLayout>