<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_fundo"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"

            android:background="@color/azul_fundo_oscuro"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginBottom="10dp"
                android:background="@color/branco" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tIdDoPedido"
                    android:layout_marginLeft="5dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/id_do_pedido"
                    android:textColor="@color/branco" />

                <TextView
                    android:layout_width="4dp"
                    android:layout_height="match_parent"
                    android:background="@color/branco"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"/>

                <TextView
                    android:id="@+id/tValorDoPedido"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/valor_do_pedido"
                    android:textColor="@color/branco" />

                <TextView
                    android:layout_width="4dp"
                    android:layout_height="match_parent"
                    android:background="@color/branco"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"/>

                <TextView
                    android:id="@+id/tStatusDoPedido"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/status_do_pedido"
                    android:textColor="@color/branco" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="10dp"
                android:background="@color/branco" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>