<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_fundo">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@color/azul_fundo_oscuro"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:paddingTop="5dp"
            android:background="@color/azul_fundo_oscuro"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/branco"
            android:text="@string/selecione_a_quantidade" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/azul_fundo_oscuro"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/branco" />

            <ListView
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:id="@+id/lAppedida"></ListView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/branco" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:paddingTop="5dp"
                android:background="@color/azul_fundo_oscuro"
                android:layout_marginLeft="20dp"
                android:gravity="center|left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/branco"
                android:text="@string/total_a_pagar" />

            <TextView
                android:paddingTop="5dp"
                android:background="@color/azul_fundo_oscuro"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="10dp"
                android:gravity="center|left"
                android:textSize="@dimen/font213"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/branco"
                android:text="24,50" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/tContinuar">

        <TextView
            android:background="@drawable/selector_btn"
            android:text="@string/finalizar_pedido"
            android:gravity="center_vertical|center"
            android:layout_width="match_parent"
            android:textColor="@color/azul_fundo_oscuro"
            android:textSize="@dimen/font18"
            android:layout_height="@dimen/dimen57" />
    </LinearLayout>
</LinearLayout>